--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
       rel="stylesheet"
     />
-    <title>Edu Project</title>
+    <title>Edu Platform</title>
   </head>
   <body>
     <div id="root"></div>
